# interview-as-a-service

./: .gitignore  add_company_column.py  alembic.ini  list_models.py  log.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: __init__.py  jd.py  matches.py  resume.py  retell.py
api/routes/: __init__.py  health.py  matching.py  resumes.py
application/: __init__.py
backend/: .dockerignore  .gitignore  Dockerfile  list_gemini_models.py  log.py  main.py  pyproject.toml  requirements.txt  schemas.py  stderr.txt
backend/application/: schemas.py
backend/db/: candidate_job_repository.py  database.py  insert.py  models.py
backend/match_engine/: candidate_job_matcher.py  matcher.py
backend/parsers/: jd_parser.py  resume_parser.py
backend/prompts/: jd_prompt.py  job_description_prompt.py  resume_prompt.py  retell_prompt.py
backend/s3_utils/: tenant_onboarder.py
backend/services/: __init__.py  embedding_service.py  jd_ingest_service.py  matching_service.py  parse_jd_service.py  retell_service.py
backend/temp_extracted_resumes/: 04460a41-3552-4045-8160-c8e0e0b41a23_raw.txt  dc00d08a-33bf-45a9-9852-074560cc0730_raw.txt
backend/utils/: api_client.py  gemini_client.py  json_file_saver.py  qdrant_client_wrapper.py  (+2 more)
db/: candidate_job_repository.py  models.py
frontend/: README.md  metadata.json  next.config.ts  package-lock.json  package.json  test-db.ts  tsconfig.json  tsconfig.tsbuildinfo
parsers/: resume_parser.py
prompts/: retell_prompt.py
utils/: gemini_client.py
(+156 files in other folders)
