[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.1",
    "black==26.1.0",
    "fastapi[standard]==0.132.0",
    "flake8==7.3.0",
    "google-genai>=1.65.0",
    "loguru==0.7.2",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pypdf==6.7.2",
    "pytest==8.3.5",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "retell-sdk==5.16.0",
    "sqlalchemy==2.0.46",
]
